.gsd.migrating/exec/594645d4-8339-4c0c-94d1-f04d5beeebcd.stdout
   Compiling cmt-rs v0.1.0 (/mnt/j/cmt-rs)
error[E0308]: mismatched types
  --> src/services/scanner.rs:49:39
   |
49 |   const F4SE_SCRIPT_NAMES: [&str; 30] = [
   |  _________________________________--____^
   | |                                 |
   | |                                 help: consider specifying the actual array length: `29`
50 | |     "actor.pex",
51 | |     "actorbase.pex",
52 | |     "armor.pex",
...  |
78 | |     "weapon.pex",
79 | | ];
   | |_^ expected an array with a size of 30, found one with a size of 29

error[E0308]: mismatched types
   --> src/services/scanner.rs:81:44
    |
 81 |   const ARCHIVE_NAME_WHITELIST: [&str; 38] = [
    |  ______________________________________--____^
    | |                                      |
    | |                                      help: consider specifying the actual array length: `39`
 82 | |     "creationkit - shaders.ba2",
 83 | |     "creationkit - textures.ba2",
 84 | |     "fallout4 - animations.ba2",
...   |
120 | |     "dlcultrahighresolution - textures16.ba2",
121 | | ];
    | |_^ expected an array with a size of 38, found one with a size of 39

error[E0277]: the trait bound `ScannerProgressEvent: Eq` is not satisfied
    --> src/services/scanner.rs:463:5
     |
 452 | #[derive(Debug, Clone, PartialEq, Eq)]
     |                                   -- in this derive macro expansion
...
 463 |   ...ogressEvent>,
     |   ...^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Eq` is not implemented for `ScannerProgressEvent`
    --> src/services/scanner.rs:251:1
     |
 251 ...rogressEvent {
     ...^^^^^^^^^^^^
help: the trait `Eq` is implemented for `Vec<..., ...>`
    --> /home/evild/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/vec/mod.rs:4206:1
     |
4206 ...or Vec<T, A> {}
     ...^^^^^^^^^^^^
     = note: required for `Vec<...>` to implement `Eq`
note: required by a bound in `std::cmp::AssertParamIsEq`
    --> /home/evild/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/cmp.rs:379:31
     |
 379 | ...T: Eq + ...
     |       ^^ required by this bound in `AssertParamIsEq`
     = note: the full name for the type has been written to '/mnt/j/cmt-rs/target/debug/deps/cmt_rs-e8c11e718bafc9d4.long-type-13149984196235184197.txt'
     = note: consider using `--verbose` to print the full type name to the console

error[E0382]: borrow of moved value: `request`
    --> src/services/scanner.rs:2014:126
     |
2011 | ...   request: ScannerScanRequest<'a>,
     |       ------- move occurs because `request` has type `ScannerScanRequest<'_>`, which does not implement the `Copy` trait
...
2014 | ...   service.scan(request.with_data_path(data_path()).with_enabled_modules(request.enabled_modules).with_enabled_archives(...d_archives))
     |                    ------- value moved here                                                                                ...^^^^^^^^^^ value borrowed here after move
     |
     = note: the full name for the type has been written to '/mnt/j/cmt-rs/target/debug/deps/cmt_rs-e8c11e718bafc9d4.long-type-9844105691426318069.txt'
     = note: consider using `--verbose` to print the full type name to the console
help: consider cloning the value if the performance cost is acceptable
     |
2014 |         service.scan(request.clone().with_data_path(data_path()).with_enabled_modules(request.enabled_modules).with_enabled_archives(request.enabled_archives))
     |                             ++++++++

warning: unused variable: `settings`
    --> src/services/scanner.rs:2010:9
     |
2010 | ...   settings: &...
     |       ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_settings`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0308, E0382.
For more information about an error, try `rustc --explain E0277`.
warning: `cmt-rs` (bin "cmt-rs" test) generated 1 warning
error: could not compile `cmt-rs` (bin "cmt-rs" test) due to 4 previous errors; 1 warning emitted
__EXIT_CODE=
__DURATION_MS=0
